# ScreenTranslator

./: README.md  build.gradle  debugging.txt  gradle.properties  settings.gradle
.devcontainer/: Dockerfile  Dockerfile_test  Dockfile  devcontainer.json  devcontainer.test.json
.github/workflows/: build-apk.yml
app/: .gitignore  build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OEMConstFiles.c  OEMFeatures.h  OEMFont.c  OEMLogger.c  OEMMedia.c  OEMMediaFormats.c  brewemu.cpp  brewemu.h
app/src/main/cpp/bre/: AEENet.c  OEMAddrBook.c  OEMAppFuncs.c  OEMBN.c  OEMDisplayDev.c  OEMDisplayDevImpl.c  OEMFS.cpp  OEMFSPath.cpp  OEMHeap.c  OEMMD5.c  OEMMediaCMidi.c  OEMMediaCMidi.cpp  OEMOS.c  OEMStringFuncs.c  OEMSysClock.c  OEMTAPI.c  TelephonyStub.cpp
app/src/main/cpp/bre2/: breConfig.c  breConfig.h  breDisplayConfig.h  breGfx.c  breGfx.h  breMockSignature.c  breStartup.c  brewemu.c  brewemu.cpp
app/src/main/cpp/brewappmgr/: BrewAppMgr.c  BrewAppMgrSettings.h
app/src/main/cpp/brewrt/: a1litesignal.fixed.lib  aeeaddrbk.fixed.lib  aeebattery.fixed.lib  aeebci.fixed.lib  aeebci.lib  aeebtil.fixed.lib  aeecamera.fixed.lib  aeecodesig.fixed.lib  aeecontrols.fixed.lib  aeedb.fixed.lib  aeedialog.fixed.lib  aeefont.fixed.lib  aeeitemstore.fixed.lib  aeejoystick.fixed.lib  aeemenu.fixed.lib  aeemm.fixed.lib  aeepdiparsers.fixed.lib  aeepng.fixed.lib  aeepng.lib  aeeposdet.fixed.lib  aeersa.fixed.lib  aeesecurity.fixed.lib  aeeseed.fixed.lib  aeesio.fixed.lib  aeesms.fixed.lib  aeessl.fixed.lib  aeetapi.fixed.lib  aeeunzip.fixed.lib  aeeunzip.lib  aeevcalstore.fixed.lib  aeeweb.fixed.lib  png.fixed.lib  png.lib  z.fixed.lib  z.lib
app/src/main/cpp/mmapi/: MMPlayer.h
app/src/main/java/com/example/screentranslator/: FloatingWindowService.kt  MainActivity.kt  OCRProcessor.kt  OverlayView.kt  ResultOverlayView.kt  ScreenshotUtil.kt  SettingsActivity.kt  TimerManager.kt  Translator.kt
app/src/main/java/io/github/usernameak/brewemulator/: EmulatorKeypad.java  EmulatorMainContext.java  EmulatorSurfaceView.java  MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
